--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
     <script src="{% static 'js/script.js' %}"></script>  <!-- JS File -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
-    <link rel="icon" href="{% static "#" %}" type="image/x-icon"/>
+    <link rel="icon" href="" type="image/x-icon"/>
 
   <!-- CSS Files -->
   {% comment %} <link rel="stylesheet" href="{% static "assets/css/bootstrap.min.css" %}" />
