--- a/templates/stock/stock_list.html
+++ b/templates/stock/stock_list.html
@@ -14,6 +14,8 @@
         <div class="card-header">
             <div class="d-flex align-items-center">
                 <h4 class="card-title">Stock List</h4>
+                <a href="{% url 'generate_pdf_report' %}" class="btn btn-primary">Download PDF</a>
+
                 <button
                     class="btn btn-primary btn-round ms-auto"
                     data-bs-toggle="modal"
