--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -40,7 +40,7 @@
               <a href="{% url 'customer_list' %}"> <i class="far fa-chart-bar"></i> <p>Customer</p> </a>
             </li>
             <li class="nav-item">
-              <a href="#base"> <i class="fas fa-clipboard-list"></i><p>Invetory</p> </a> 
+              <a href="{% url 'inventory_list'%}"> <i class="fas fa-clipboard-list"></i><p>Invetory</p> </a> 
             </li>
             <li class="nav-item">
               <a href="{% url 'stock_list' %}"> <i class="fas fa-warehouse"></i> <p>Stock</p> </a> 
